Fixed parallax white space issue

--- a/Antonio_Marrero_Code/calorie-companion-app/src/app/components/login/login.component.css
+++ b/Antonio_Marrero_Code/calorie-companion-app/src/app/components/login/login.component.css
@@ -25,6 +25,7 @@ label {
     color: yellow;
     margin-left: 20%;
     margin-right: 20%;
+    margin-top: 10rem;
 }
 
 .jumbotron {
