--- a/Antonio_Marrero_Code/calorie-companion-app/src/app/components/registration/registration.component.css
+++ b/Antonio_Marrero_Code/calorie-companion-app/src/app/components/registration/registration.component.css
@@ -29,6 +29,7 @@ input {
     color: yellow;
     margin-left: 20%;
     margin-right: 20%;
+    margin-top: 10rem;
 }
 
 .jumbotron {
